soluciones/deploy-laravel.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: laravel-deploy
  namespace: laravel
spec:
  selector:  
    matchLabels:
      app: laravel
  replicas: 1
  strategy:
     type: Recreate
  template:   
    metadata:
      labels:
        app: laravel
    spec:
      containers:
      - name: laravel
        ports:
        - containerPort: 8000
        image: bitnami/laravel:11.0.8
        resources:
          limits:
              memory: "200Mi"
              cpu: "2"
          requests:
              memory: "100Mi" 
              cpu: "0.5"
        livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 0
            periodSeconds: 5
        readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 0
            periodSeconds: 5
      volumes:
        - name: bbdd
          persistentVolumeClaim:
             claimName: pvc-laravel
