soluciones/deploy-mariadb.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: mariadb-deploy
  namespace: laravel
spec:
  selector:  
    matchLabels:
      app: mariadbapp
  replicas: 1
  template:  
    metadata:
      labels:
        app: mariadbapp
    spec:
      containers:
      - name: mariadbapp
        image: mariadb:11.4.1-rc
        ports:
        - containerPort: 3306
        resources:
          limits:
              memory: "200Mi"
              cpu: "2"
          requests:
              memory: "100Mi" 
              cpu: "0.5"
      volumes:
        - name: bbdd
          persistentVolumeClaim:
             claimName: pvc-mariadb
