soluciones/service-laravel.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
  namespace: laravel
spec:
  #type: ClusterIP
  type: NodePort
  selector:
    app: laravel
  ports:
    - port: 8000
